# molecular-gnn-property-ops

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker.yml  quality.yml
docs/: architecture.md  experimental_methodology.md  model_card.md  operations.md  project_plan.md  release_checklist.md
reports/portfolio/: benchmark_summary.md  (+3 more)
scripts/: docker_build.sh  docker_run_api.sh  docker_run_dashboard.sh  docker_smoke.sh  docker_smoke_test.sh  generate_demo.sh  promote_esol_gcn.sh  run_esol_dashboard.sh  run_esol_diagnostics.sh  run_esol_fingerprint_benchmark.sh  run_esol_fixed_split_gcn_ensemble.sh  run_esol_gcn_benchmark.sh  run_esol_gcn_uncertainty.sh  run_esol_gin_benchmark.sh  run_esol_gnn_comparison.sh  run_esol_split_comparison.sh  serve_esol_api.sh
tests/: conftest.py  test_api.py  test_applicability.py  test_baselines.py  test_benchmark_compare.py  test_cli.py  test_dashboard.py  test_data_sources.py  test_datasets.py  test_diagnostics.py  test_download.py  test_duplicate_audit.py  test_featurization.py  test_fingerprints.py  test_fixed_split_workflow.py  test_gnn_compare.py  test_gnn_data.py  test_gnn_error_analysis.py  test_gnn_models.py  test_gnn_train.py  test_gnn_uncertainty.py  test_import.py  test_inference.py  test_model_registry.py  test_paths.py  test_plots.py  test_portfolio.py  test_prep.py  test_reference_index.py  test_release_metadata.py  test_service_config.py  test_splits.py  test_uncertainty_workflow.py  test_workflows.py
(+34 files in other folders)
